--- a/hazelcast-integration/springboot-caching/pom.xml
+++ b/hazelcast-integration/springboot-caching/pom.xml
@@ -75,7 +75,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.3.1.RELEASE</version>
                 <configuration>
-                    <mainClass>com.hazelcast.springboot.caching.BootifulMember</mainClass>
+                    <mainClass>com.hazelcast.springboot.caching.member.BootifulMember</mainClass>
                 </configuration>
             </plugin>
         </plugins>
