--- a/hazelcast-integration/springboot-caching/pom.xml
+++ b/hazelcast-integration/springboot-caching/pom.xml
@@ -52,6 +52,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.22</version>
+        </dependency>
     </dependencies>
 
     <!-- adding SpringBoot BOM -->
