--- a/hazelcast-integration/springboot-caching/pom.xml
+++ b/hazelcast-integration/springboot-caching/pom.xml
@@ -23,20 +23,14 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
+    <groupId>com.hazelcast.samples</groupId>
     <artifactId>springboot-caching</artifactId>
     <name>Spring Boot: Hazelcast via Spring Caching Abstraction</name>
     <description>Spring Boot Hazelcast Integration Example via Spring Caching Abstraction</description>
-
-    <parent>
-        <groupId>com.hazelcast.samples</groupId>
-        <artifactId>hazelcast-integration</artifactId>
-        <version>0.1-SNAPSHOT</version>
-    </parent>
+    <version>0.1-SNAPSHOT</version>
 
     <properties>
-        <!-- needed for checkstyle/findbugs -->
-        <main.basedir>${project.parent.parent.basedir}</main.basedir>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <hazelcast.version>3.11-SNAPSHOT</hazelcast.version>
     </properties>
 
     <dependencies>
@@ -56,6 +50,11 @@
             <groupId>com.esotericsoftware.kryo</groupId>
             <artifactId>kryo</artifactId>
             <version>2.22</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-all</artifactId>
+            <version>${hazelcast.version}</version>
         </dependency>
     </dependencies>
 
@@ -80,7 +79,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.3.1.RELEASE</version>
                 <configuration>
-                    <mainClass>com.hazelcast.springboot.caching.member.BootifulMember</mainClass>
+                    <mainClass>com.hazelcast.springboot.caching.member.HzClusterMember</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
